fix: overflowing column in smaller window size (#959)
Fixed overflowing column in smaller window size.

--- a/css/theme-v4.css
+++ b/css/theme-v4.css
@@ -203,7 +203,7 @@ div.sidebarTitle, div.sidebarTitle a {
         z-index: 999;
     }
     .col-md-9 {
-        margin-left: 24%;
+        margin-left: 27%;
     }
 }
 
